<resources>
    <string name="app_name">Folink</string>
    <string name="header_hint">search</string>
    <string name="AboutFragment_label_check_update">check update</string>
    <string name="AboutFragment_label_setting">help</string>
    <string name="AboutFragment_label_help">Help</string>
    <string name="AboutFragment_label_contact_me">Contact us</string>
    <string name="AboutFragment_label_grade">Grade</string>
    <string name="AboutFragment_desc_introduction">Your professional news app</string>

    <string name="transition_topnew" translatable="false">topnewsimage</string>

    <string name="transition_topnew_linear" translatable="false">topnewlinear</string>
</resources>
