<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        >

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:singleLine="true"
            android:textColor="@color/ripple_dark"
            android:textSize="18sp"
            />
    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_card">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:src="@drawable/logo_icon"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_avatar"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:text="@string/app_name"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/font_size_normal_high"/>

        <TextView
            android:id="@+id/tv_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:text="@string/AboutFragment_desc_introduction"
            android:textSize="@dimen/font_size_small"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bottom_line">

            <TextView
                android:id="@+id/tv_grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_grade"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_contact_me"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_help"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_check_update"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

    
