<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        >

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/ripple_dark"
            android:textStyle="bold"
            android:singleLine="true"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bottom_line">

            <TextView
                android:id="@+id/tv_grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_grade"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_contact_me"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_help"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_check_update"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_size_normal_high"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>